--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ dist/
 downloads/
 eggs/
 .eggs/
+.idea/
+__pycache__/
 lib/
 lib64/
 parts/
@@ -145,3 +147,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 /Hide/tokenPrivate.py
+/.gitignore
+/.gitattributes
